--- a/test/fixtures/pages.yml
+++ b/test/fixtures/pages.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 one:
   id: 1
-  title: MyString
-  body: MyText
-  category: MyString
+  title: Die erste Seite
+  body: "Hier ist der Inhalt"
+  category: Test
   created_at: 2007-08-21 00:21:59
   updated_at: 2007-08-21 00:21:59
 two:
   id: 2
-  title: MyString
-  body: MyText
-  category: MyString
+  title: Impressum
+  body: "Wer hat was zu sagen"
+  category: Inhalt
   created_at: 2007-08-21 00:21:59
   updated_at: 2007-08-21 00:21:59
